# switch-testbed-load-balancer

./: .dockerignore  .gitignore  .uvignore  Dockerfile  Makefile  README.md  config.yaml  credentials.yaml copy.example  device.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backend-tests.yml  docker-build-and-push.yml
app/: logging_config.py  main.py  utils.py
app/api/: deps.py  devices.py  request.py  result.py  routes_request.py  routes_reset.py  routes_result.py  routes_tickets.py  search.py
app/api/routers/: machines.py
app/core/: config.py
app/models/: device_config.py  machine.py  search_models.py  ticket.py
app/services/: logging_config.py  machine_manager.py  machine_monitor.py  task_processor.py  ticket_manager.py  ticket_search.py  validator.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: machines.py
backend/app/core/: config.py
backend/app/models/: machine.py
backend/app/services/: device_connector.py  machine_manager.py  machine_monitor.py
backend/tests/: test_api_endpoints.py  test_config.py  test_deps.py  test_device_connector.py  test_logging.py  test_machine_manager.py  test_machine_monitor.py  test_main.py
cfg/: tndo-c8k-1.cfg
config/: README.md  backend.env.example  frontend.env.example
config/base/: device.yaml
frontend/: .dockerignore  Dockerfile  app.js  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  styles.css  tsconfig.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  runtimeConfig.ts  sample-data.ts  types.ts  vite-env.d.ts
frontend/src/api/: devices.ts
frontend/src/components/: FilterMenu.css  FilterMenu.tsx  FilterPanel.css  FilterPanel.tsx  TextEntryModal.css  TextEntryModal.tsx  TextModal.css  TextModal.tsx  TicketCard.css  TicketCard.tsx  TicketModal.css  TicketModal.tsx
frontend/src/components/Machine/: MachineCard.tsx
frontend/src/components/UI/: FilterBar.tsx  StatusBadge.tsx  TokenPrompt.css  TokenPrompt.tsx
frontend/src/hooks/: useAuthToken.ts  useDeviceOptions.ts  useMachineData.ts  useMachineFilters.ts  useMachines.ts  useTickets.ts
frontend/src/types/: index.ts
scripts/: get_machine.sh  send_task.sh
